# ViennaPS-LibTorch-Example

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux_test.yml  macos_test.yml  windows_test.yml
app/: CMakeLists.txt  TorchEstimator.hpp
app/scripts/: pretrained_model.pt  train.py
src/: CMakeLists.txt  TorchDemo.cpp
